Some code paths of Kleopatra don't use gpgme to find the GnuPG installation. Instead they look into the registry. Usually, this works because there's only one installation of GnuPG, but with T7528: Make it possible to run Kleopatra VSD and Kleopatra GPD in parallel this will change. Therefore, Kleopatra should always use gpgme to find the GnuPG installation.
Description
Description
Revisions and Commits
Revisions and Commits
| rLIBKLEO Libkleo | |||
| rLIBKLEO3125c28d3c2c Look for GnuPG executables in the GnuPG install path | |||
| rLIBKLEOb6aee0cddc73 Use gpgme to find GnuPG | |||
| rLIBKLEObfec230af060 Look for GnuPG executables in the GnuPG install path | |||
| rLIBKLEO9d973612955d Use gpgme to find GnuPG | |||
| rW Gpg4win | |||
| rW0a8a64a51ac3 Don't configure libkleo anymore with GnuPG install dir registry key | |||
Related Objects
Related Objects
Event Timeline
Comment Actions
Fixed and backported for VSD 3.4.
Notes for testing: The following things are affected, but if anything then the new implementation should fix problems that occurred because a wrong GnuPG installation was used:
- VSD/GPD: Checking the signature of the VERSION file (path of gpgv.exe, path of GnuPG's signing keys)
- Gpg4win/?: Update check (path of gpg-connect-agent.exe)
- all: Handling of archives, i.e. encrypt, decrypt, etc. (path of gpgtar)
- all: Listing of versions of backend components in About dialog (path of gpgconf)
- all: Start and restart of gpg-agent (path of gpgconf to launch/kill gpg-agent)
- all: Change root certificate trust (path of gpgconf to reload gpg-agent)
- all: Certificate Dump in Certificate Details of S/MIME certificates (path of gpgsm)
- all: Clear CLR Cache (path of gpgsm)
- all: Dump CRL Cache (path of gpgsm)
- all: Import CRL From File (path of gpgsm)
- all: Publish on Server (path of gpg)
- all: Generate revocation certificate in Certificate Details of (own) OpenPGP certificates (path of gpg)
Comment Actions
I assume, that testing the functionality is the only thing I can do here.
Looks good to me on gpg4win-5.0.0-beta479 @ win11:
- Gpg4win/?: Update check (path of gpg-connect-agent.exe)
- all: Handling of archives, i.e. encrypt, decrypt, etc. (path of gpgtar)
- all: Listing of versions of backend components in About dialog (path of gpgconf)
- all: Start and restart of gpg-agent (path of gpgconf to launch/kill gpg-agent)
- all: Change root certificate trust (path of gpgconf to reload gpg-agent)
- all: Certificate Dump in Certificate Details of S/MIME certificates (path of gpgsm)
- all: Clear CLR Cache (path of gpgsm)
- all: Dump CRL Cache (path of gpgsm)
- Note: untested, but other gpgsm paths were ok, so this will be fine
- all: Import CRL From File (path of gpgsm)
- Note: untested, but other gpgsm paths were ok, so this will be fine
- all: Publish on Server (path of gpg)
- all: Generate revocation certificate in Certificate Details of (own) OpenPGP certificates (path of gpg)