Use gpgme to find GnuPG

This ensures that Kleopatra doesn't find a different GnuPG installation
than gpgme.

GnuPG-bug-id: 7971